# bachelors-demo

./: .gitignore  CMakeLists.txt  README.md  camera.cpp  camera.hpp  math.hpp  raytracer.cpp  raytracer.hpp  run_n_benchmarks.sh  test  test.cpp
kernels/: raymarcher.cl  test.cl
kernels/include/: debug.cl  math.cl  rt_primitives.cl
lib/: glpix.cpp  glpix.hpp
lib/tiny_bvh/: tiny_bvh.cpp  tiny_bvh.h
perf-data/: perf-SAH.csv  perf-full-sah-0.csv  perf-no-second-refit.csv  perf-second-refit-early-exit.csv
splat/: splat_model.cpp  splat_model.hpp
splat/include/: rtutils.h
splat/kernels/: raytracer.cl
utils/: progress_bar.hpp  progress_counter.hpp
